Istio/deployments/mutual.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mutual
  namespace: default
spec:
  mtls:
    mode: STRICT
