Istio/deployments/deployment.yaml

# Copyright
apiVersion: v1
kind: Service
metadata:
  name: dron1
  labels:
    app: dron1
    service: dron1
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: dron1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron1
  labels:
    app: dron1
    version: 0.1.0-dron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dron1
      version: 0.1.0-dron
  template:
    metadata:
      labels:
        app: dron1
        version: 0.1.0-dron
    spec:
      serviceAccountName: dron1
      containers:
      - name: dron1
        image: blazejczuk/drony:headers-v2
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dron2
  labels:
    app: dron2
    service: dron2
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: dron2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron2
  labels:
    app: dron2
    version: 0.1.0-dron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dron2
      version: 0.1.0-dron
  template:
    metadata:
      labels:
        app: dron2
        version: 0.1.0-dron
    spec:
      serviceAccountName: dron2
      containers:
      - name: dron2
        image: blazejczuk/drony:headers-v2
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: dron3
  labels:
    app: dron3
    service: dron3
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: dron3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron3
  labels:
    app: dron3
    version: 0.1.0-dron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dron3
      version: 0.1.0-dron
  template:
    metadata:
      labels:
        app: dron3
        version: 0.1.0-dron
    spec:
      serviceAccountName: dron3
      containers:
      - name: dron3
        image: blazejczuk/drony:headers-v2
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: dron4
  labels:
    app: dron4
    service: dron4
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: dron4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron4
  labels:
    app: dron4
    version: 0.1.0-dron
spec:
  selector:
    matchLabels:
      app: dron4
      version: 0.1.0-dron
  template:
    metadata:
      labels:
        app: dron4
        version: 0.1.0-dron
    spec:
      serviceAccountName: dron4
      containers:
      - name: dron4
        image: blazejczuk/drony:headers-v2
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi




# ---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: dron5
# spec:
#   selector:
#     matchLabels:
#       app: dron5
#   template:
#     metadata:
#       labels:
#         app: dron5
#         version: 0.1.0-dron
#     spec:
#       serviceAccountName: dron5
#       terminationGracePeriodSeconds: 5
#       securityContext:
#         fsGroup: 1000
#         runAsGroup: 1000
#         runAsNonRoot: true
#         runAsUser: 1000
#       containers:
#       - name: server
#         image: blazejczuk/drony:headers-v2  ## BEZ pingowania
#         ports:
#         - containerPort: 3001
#           name: http-dron5-svc
#         envFrom:
#         - configMapRef:
#             name: special-config
#         env:
#         - name: NAME
#           value: dron5
#         - name: BG_COLOR
#           value: yellow
#         - name: DRONES
#           value: dron3
#         - name: PORT
#           value: "3001"
#         resources:
#           requests:
#             cpu: 100m
#             memory: 64Mi
#           limits:
#             cpu: 200m
#             memory: 128Mi

# image: blazejczuk/drony:0.7  ## BEZ pingowania
