Istio/deployments/virtual-service-ingress-gateway-fqdn.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dron1-http-gateway-service
spec:
  hosts:
    - "dron1.kube.home"
  gateways:
    - http-gateway
  http:
  - match:
    route:
    - destination:
        host: dron1
        port:
          number: 3001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dron2-http-gateway-service
spec:
  hosts:
    - "dron2.kube.home"
  gateways:
    - http-gateway
  http:
  - match:
    route:
    - destination:
        host: dron2
        port:
          number: 3001

---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dron3-http-gateway-service
spec:
  hosts:
    - "dron3.kube.home"
  gateways:
    - http-gateway
  http:
  - match:
    route:
    - destination:
        host: dron3
        port:
          number: 3001
