Istio/deployments/allow-nothing.yaml
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: allow-nothing
  namespace: default
spec:
  selector:
    matchLabels:
      app: dron3
