Istio/deployments/policy1.yaml
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "policy1"
  namespace: default
spec:
  selector:
    matchLabels:
      app: dron3
  action: DENY    
  rules:
  - from:
    - source:
       principals: ["cluster.local/ns/default/sa/dron2"]
    to:
    - operation:
       methods: ["POST", "GET"]
